# MineTest

./: CMakeLists.txt  README.md
MineTestCore/: CMakeLists.txt
MineTestCore/includes/MineTestCore/: Application.hpp  Events.hpp  Log.hpp  ResourceManager.hpp  Window.hpp  myglad.hpp
MineTestCore/includes/MineTestCore/Graphics/: Camera.hpp  LineBatch.hpp  Mesh.hpp  PNG.hpp  Shader.hpp  Texture.hpp  VoxelRenderer.hpp  myglad.hpp
MineTestCore/includes/MineTestCore/Input/: Commands.hpp  InputHandler.hpp
MineTestCore/includes/MineTestCore/ResourceManager/: ResourceManager.hpp
MineTestCore/includes/MineTestCore/System/: Events.hpp
MineTestCore/includes/MineTestCore/Voxels/: Chunk.hpp  Chunks.hpp  Voxel.hpp
MineTestCore/res/: main.glslv
MineTestCore/res/shader/: cursor.glslf  cursor.glslv  lines.glslf  main.glslv
MineTestCore/res/worlds/: 1.txt
MineTestCore/src/MineTestCore/: Application.cpp  Events.cpp  ResourceManager.cpp  Window.cpp  test.cpp
MineTestCore/src/MineTestCore/Graphics/: Camera.cpp  LineBatch.cpp  Mesh.cpp  PNG.cpp  Shader.cpp  Texture.cpp  VoxelRenderer.cpp
MineTestCore/src/MineTestCore/Input/: Commands.cpp  InputHandler.cpp
MineTestCore/src/MineTestCore/ResourceManager/: ResourceManager.cpp
MineTestCore/src/MineTestCore/System/: Application.cpp  Events.cpp  Window.cpp
MineTestCore/src/MineTestCore/Voxels/: Chunk.cpp  Chunks.cpp
MineTestEditor/: CMakeLists.txt
MineTestEditor/src/: main.cpp
